--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fourier Series</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <style>
+        body{
+            height: 100%;
+            width: 100%;
+            text-align: center;
+            overflow: hidden;
+        }    
+        #myCanvas{
+            height: 100%;
+            width: 100%;
+        }
+    </style>
+
 </head>
 <body>
     <canvas id="myCanvas"></canvas>
