--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,21 +8,26 @@
     <title>Fourier Series</title>
 
     <style>
-        body{
+        body {
             height: 100%;
             width: 100%;
+            margin: 0%;
+            padding: 0%;
             text-align: center;
             overflow: hidden;
-        }    
-        #myCanvas{
+        }
+
+        #myCanvas {
             height: 100%;
             width: 100%;
         }
     </style>
 
 </head>
+
 <body>
     <canvas id="myCanvas"></canvas>
 </body>
 <script src="main.js"></script>
+
 </html>
